--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -15,7 +15,9 @@
         <field name="arch" type="xml">
             <tree string="">
                 <field name="name" string="Title"/>
+                <field name="property_type_id" />
                 <field name="postcode" string="Post Code"/>
+                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                 <field name="bedrooms" />
                 <field name="living_area" string="Living Area (sqm)"/>
                 <field name="expected_price" />
