--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -39,10 +39,11 @@
                 <sheet>
                     <div name="button_box" class="oe_button_box"></div>
                     <div class="oe_title">
-                        <h1><field name="name" class="oe_inline"/></h1>
+                        <h1><field name="ref" class="oe_inline"/></h1>
                     </div>
                     <group>
                         <group>
+                            <field name="name"></field>
                             <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                             <field name="property_type_id" />
                             <field name="postcode" />
