--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -45,7 +45,7 @@
                         <group>
                             <field name="name" />
                             <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
-                            <field name="property_type_id" />
+                            <field name="property_type_id" options="{'no_create': True}"/>
                             <field name="postcode" />
                             <field name="date_availibility" />
                         </group>
@@ -184,6 +184,7 @@
                     </div>
                     <group>
                         <field name="name" />
+                        <field name="code" />
                     </group>
                     <notebook>
                         <page name="properties" string="Properties">
